# PPOIS-labs

./: .gitignore  .gitmodules  CMakeLists.txt  ConsoleApplication9.cpp  Matrix.h  PPOIS1.cpp  README.md  large.hpp  main.cpp
LR1/: .gitignore  1 lab.cpp  134.txt  1labTuringsMachine.cpp  1st.cpp  CMakeCache.txt  CMakeLists.txt  ClassMatrixOrigin.h  Code.cpp  ConsoleApplication1.cpp  ConsoleApplication2.cpp  Cube.cpp  Cube.h  Direction.h  Dockerfile  Doxyfile  Doxygen PostMachine  Face.cpp  FirstLab.cpp  Fraction.cpp  Fraction.h  Game.cpp  Game.h  Head.cpp  Header.cpp  Header.h  HeaderHead.h  HeaderMT.h  HeaderRule.h  HeaderRuleSet.h  HeaderTape.h  Input.cpp  Input.h  InputLib.cpp  InputLibHeader.h  Lab1_1.7.2.cpp  Lab3.cpp  Lab3.sln  Lab3.txt  Lab3.vcxproj  (+139 more)
LR1/ConsoleApplication1/: ConsoleApplication1.sln
LR1/Debug/: Lab3.exe.recipe  Lab3.ilk  Lab3.vcxproj.FileListAbsolute.txt  vc142.idb
LR1/Lab_POIS_1/: ConsoleApplication1.sln  Lab_PPOIS_1.docx
LR1/Lib/: postMachine.cpp  postMachine.h
LR1/MathLib/: Header.h  MathLib.vcxproj  Source.cpp
LR1/PostMachine/: PostMachine.cpp  PostMachine.h  PostMachine.sln
LR1/Rubik's Cube/: Header.h  Rubik's Cube.sln  Rubik's Cube.vcxproj  Rubik's Cube.vcxproj.filters  Source.cpp
LR1/Tests/: CMakeLists.txt  Google_Tests_run  Makefile  cmake_install.cmake  test1.txt  test2.txt
LR1/TuringMachine/: TuringMachine.sln
LR1/doc/: Doxyfile
LR1/docs/: doxyfile
LR1/html/: _game_8h.html  _game_8h_source.html  _header_8h.html  _header_8h_source.html  _main_8cpp.html  _tic_tac_toe_8h.html  _tic_tac_toe_8h_source.html  annotated.html  class_game-members.html  class_game.html  class_natural-members.html  class_natural.html  class_point-members.html  class_point.html  class_rectangle-members.html  class_rectangle.html  class_t_t_t-members.html  class_t_t_t.html  classes.html  classkrestiki__noliki-members.html  classkrestiki__noliki.html  classmachine-members.html  classmachine.html  classpatterns-members.html  classpatterns.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0c0d6c86eb98a979f563db8502b6e7c9.html  dir_212efe9a2e9757eefc3997d1e4dd1fc1.html  dir_275089585c7fc1b5fd5d7d42c69cb1da.html  dir_5a9934b19bc63cc283eeef593ffd7dc2.html  dir_5c0a92ad7cffe9cd0798a7b99c385550.html  dir_62da0982db7fd48145c6e02e13397f18.html  dir_6b8ea48e3ffae26d0f1c33aded4c3497.html  dir_90b540a60f6d4c7f903393b3db9eca71.html  dir_90cfbffbcfed5da2f071104ad36561df.html  dir_a370035579d605e6f04a47afa19daefe.html  dir_a40fa9aff3b929556dcc35fbe66361e1.html  dir_a696277d18d89885bf60da26304d5d1e.html  dir_b9e0da3644f1e684e719e6acd9c85ddb.html  dir_bd5230b5403f0917da908a1263fb4d41.html  (+24 more)
LR1/laba1/: ConsoleApplication1.sln  ~$b1_PPVIS.odt
LR1/latex/: _game_8h.tex  _game_8h_source.tex  _main_8cpp.tex  annotated.tex  class_game.tex  classkrestiki__noliki.tex  files.tex  refman.tex
LR1/matrix_lib/: Matrix.cpp  Matrix.h
LR1/ppoisl1/: Doxyfile  Header.h  MC.cpp  ppoisl1.cpp  ppoisl1.sln  ppoisl1.vcxproj  ppoisl1.vcxproj.filters  reportppisL1.docx
LR1/ppvis_1lab/: ppvis_1lab.sln
LR1/rectangle_lib/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
LR1/rectangle_tests/: CMakeLists.txt
LR1/resources/: big_matrix.txt  diagonal_matrix.txt  lower_matrix.txt  matrixToBeTransp.txt  not_square_matrix.txt
LR1/src/: CMakeLists.txt  Minor.h  Normal_matrix.h  Normal_matrix_rel.cpp  includes.h  main.cpp  types.cpp
LR1/tests/: CMakeLists.txt  determinantTest.cpp  extraFunc.cpp  main.cpp  mathOperatorsTest.cpp  polynominal_test.cpp  resizeTest.cpp  setTest.cpp  subTest.cpp
LR2/: .gitignore  1.txt  2 lab.cpp  2.txt  2lab.cpp  2labXml.cpp  3.txt  ADD.cpp  ADD.h  ATM.cpp  ATMHeader.h  ATMScreens.cpp  ATMScreens.h  Attribute.cpp  Attribute.h  BANKS.cpp  BANKS.h  Bank.h  BankBase.txt  BankCard.h  BelarusBank.cpp  CDATA.cpp  CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.hpp  Card.cpp  Card.h  CargoStation.cpp  CargoStation.h  CargoWagon.cpp  CargoWagon.h  CashMachine.cpp  CashMachine.h  Check.cpp  Check.h  Class.h  ClassCopy.cpp  ClassCopy.h  Comment.cpp  (+296 more)
LR2/ConsoleApplication1/: ConsoleApplication1.sln
LR2/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj
LR2/Entity/: Animal.cpp  Animal.h  Entity.cpp  Entity.h  Herbivore.cpp  Herbivore.h  Plant.cpp  Plant.h
LR2/GameField/: Cell.cpp  Cell.h  GameField.cpp  GameField.h
LR2/PPOIS2/: PPOIS2.sln
LR2/Tests/: CMakeLists.txt
LR2/database/: Houk.txt  Lady.txt  Pol.txt
LR2/docs/: doxyfile
LR2/dwellers/: animal.cpp  animal.h  carnivore.cpp  carnivore.h  dweller.cpp  dweller.h  herbivore.cpp  herbivore.h  plant.cpp  plant.h
LR2/field/: field.cpp  field.h  square.cpp  square.h
LR2/laba2.2/: laba2.2.cpp  laba2.2.vcxproj  laba2.2.vcxproj.filters
LR2/main/: Calculator.cpp  Exceptions.hpp  Functions.cpp  Functions.hpp  Solver.cpp  Tokens.hpp  Variables.hpp  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
LR2/ppvis_lab2/: ppvis_lab2.sln
LR2/resources/: example_script.sh  input.xml  queries.txt
LR2/src/: XMLDocument.hpp  abstractEntity.hpp  autoState.cpp  autoState.hpp  extraFuncs.cpp  fieldAndCell.hpp  gameEngine.cpp  gameEngine.hpp  gameState.hpp  introState.cpp  introState.hpp  main.cpp  mainCycle.hpp  moderateState.cpp  moderateState.hpp
LR2/tests/: test.cpp
LR2/visualization/: package.json  tsconfig.json
LR2/xml_lib/: Attribute.cpp  Attribute.h  CMakeLists.txt  Comment.cpp  Comment.h  Declaration.h  Document.cpp  Document.h  Element.cpp  Element.h  Node.cpp  Node.h  ProcessingInstruction.h  TextElement.cpp  TextElement.h  (+4 more)
LR3/: .gitignore  3 лр.cpp  3 лр.sln  3 лр.vcxproj  3 лр.vcxproj.filters  BinaryTree.h  CMakeLists.txt  Changed.h  CombSort.h  ConsoleApplication1.cpp  ConsoleApplication12.cpp  Error.h  Graph.h  Header.h  HeapSort.cpp  HeapSort.h  Lab3.cpp  Lab3V4.cpp  Lab3_1.3.cpp  Lr3.cpp  MSD.h  Matrix.h  Menu.h  MyObject — копия.h  MyObject.h  NGraph.h  NonOrGraph.h  Obj.h  OrientedGraph.h  OrtAdjList.cpp  Sort.cpp  Source.cpp  StoogeSort.cpp  StoogeSort.h  Student.cpp  Student.hpp  Tacosort.cpp  ThirdLab.cpp  ThirdLab.vcxproj  ThirdLab.vcxproj.filters  (+31 more)
(+739 files in other folders)
